// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attrs does not pass transient props to HTML element 1`] = `
<div
  className="sc-a sc-b c"
  theme={{}}
/>
`;

exports[`attrs merge attrs 1`] = `
<button
  className="sc-a"
  tabIndex={0}
  theme={{}}
  type="submit"
/>
`;

exports[`attrs merge attrs when inheriting SC 1`] = `
<button
  className="sc-a sc-b"
  tabIndex={0}
  theme={{}}
  type="submit"
/>
`;

exports[`attrs pass a React component 1`] = `
<button>
  <p>
    React Component
  </p>
</button>
`;

exports[`attrs pass a simple attr via function with object return 1`] = `
<button
  className="sc-a"
  theme={{}}
  type="button"
/>
`;

exports[`attrs pass a simple attr via object 1`] = `
<button
  className="sc-a"
  theme={{}}
  type="button"
/>
`;

exports[`attrs pass attrs to style block 1`] = `
<a
  className="sc-a b"
  data-active-class-name="--is-active"
  href="#"
  theme={{}}
/>
`;

exports[`attrs pass props to the attr function 1`] = `
<button
  className="sc-a"
  theme={{}}
  type="button"
/>
`;

exports[`attrs pass props to the attr function 2`] = `
<button
  className="sc-a"
  theme={{}}
  type="submit"
/>
`;

exports[`attrs should apply given "as" prop to the progressive type 1`] = `
<video
  className="sc-a"
  loop={true}
  theme={{}}
/>
`;

exports[`attrs should merge className 1`] = `
<div
  className="sc-a meow nya"
  theme={{}}
/>
`;

exports[`attrs should merge className even if its a function 1`] = `
<div
  className="sc-a meow nya"
  theme={{}}
/>
`;

exports[`attrs should merge className even if its a function 2`] = `
<div
  className="sc-a meow purr"
  theme={{}}
/>
`;

exports[`attrs should override children of course 1`] = `
<div
  className="sc-a"
  theme={{}}
>
  <span>
    Amazing
  </span>
</div>
`;

exports[`attrs should pass through children as a normal prop 1`] = `
<div
  className="sc-a"
  theme={{}}
>
  Probably a bad idea
</div>
`;

exports[`attrs should pass through complex children as well 1`] = `
<div
  className="sc-a"
  theme={{}}
>
  <span>
    Probably a bad idea
  </span>
</div>
`;

exports[`attrs should replace props with attrs 1`] = `
<button
  className="sc-a"
  tabIndex={0}
  theme={{}}
  type="button"
/>
`;

exports[`attrs should replace props with attrs 2`] = `
<button
  className="sc-a"
  tabIndex={0}
  theme={{}}
  type="button"
/>
`;

exports[`attrs should replace props with attrs 3`] = `
<button
  className="sc-a"
  tabIndex={0}
  theme={{}}
  type="button"
/>
`;

exports[`attrs should work with data and aria attributes 1`] = `
<div
  aria-label="A simple FooBar"
  className="sc-a"
  data-foo="bar"
  theme={{}}
/>
`;

exports[`attrs work fine with a function that returns an empty object 1`] = `
<div
  className="sc-a"
  theme={{}}
/>
`;

exports[`attrs work fine with an empty object 1`] = `
<div
  className="sc-a"
  theme={{}}
/>
`;
